2005-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c: applied a patch from
	Karine Delvare that removes an obsolete frame.

	* plug-ins/FractalExplorer/Makefile.am
	* plug-ins/FractalExplorer/logo.h: removed logo now that the About
	dialog is gone.
	
2005-06-22  Michael Natterer  <mitch@gimp.org>

	* libgimpconfig/gimpconfig-deserialize.h
	* libgimpconfig/gimpconfig-error.h
	* libgimpconfig/gimpconfig-iface.h
	* libgimpconfig/gimpconfig-params.h
	* libgimpconfig/gimpconfig-path.h
	* libgimpconfig/gimpconfig-serialize.h
	* libgimpconfig/gimpconfig-utils.h: added G_BEGIN_DECLS/G_END_DECLS.

2005-06-22  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added Edit->Preferences since that
	seems to be the standard location nowadays (bug #157613).

2005-06-22  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c: unified spelling of "Re-Show".

2005-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mblur.c: switch to a more compact dialog layout.

2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/mblur.c: add option of blurring inward
	or outward for zoom, should fix bug #142968.
	
2005-06-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c
	* plug-ins/FractalExplorer/FractalExplorer.[ch]: merged in a patch
	from Karine Delvare with further UI improvements (see bug #140202).

2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/newsprint.c: remove "optimization" that interacts
	badly with preview; fixes bug #161573.
	
2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/retinex.c:  initialize memory before using.
	Fixes bug #157915.

2005-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimplayer-floating-sel.c: set "Keep Transparency"
	FALSE when creating floating sel; see bug #161042.

2005-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c: minor changes, mainly to the