@@ -1,3 +1,9 @@
+2005-06-23  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpbrowser.[ch]: added the widget living in the
+	right_vbox to the GimpBrowser struct instead of attaching it to
+	the browser.
+
 2005-06-22  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/FractalExplorer/FractalExplorer.c: applied a patch from
